--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Kyutae's Website</title>
+    <title>Kyutae's website</title>
     <meta name="author" content="Lee Kyutae">
     <style>
         body {
@@ -27,7 +27,7 @@
     <p>I'm Kyutae.</p>
     <p>
         <ul><a href="https://github.com/gorisanson">Github</a></ul>
-        <ul><a href="/quoridor-ai">Play Quoridor against AI</a></ul>
+        <ul><a href="/quoridor-ai">Play Quoridor against AI</a> - Quoridor AI which I developed</ul>
     </p>
 </body>
 </html>
