--- a/quoridor-ai/index.html
+++ b/quoridor-ai/index.html
@@ -483,7 +483,7 @@
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
                 // Register the service worker
-                navigator.serviceWorker.register('/sw.js').then(function(registration) {
+                navigator.serviceWorker.register('./sw.js').then(function(registration) {
                     registration.addEventListener('updatefound', () => {
                         // An updated service worker has appeared in registration.installing!
                         newWorker = registration.installing;
