Correct letter case

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <p>I'm Kyutae.</p>
     <p>
-        <ul><a href="https://github.com/gorisanson">Github</a></ul>
+        <ul><a href="https://github.com/gorisanson">GitHub</a></ul>
         <ul><a href="/quoridor-ai">Quoridor AI</a> - Play Quoridor against the AI which I developed.</ul>
     </p>
 </body>
