--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>I'm Kyutae.</p>
     <p>
         <ul><a href="https://github.com/gorisanson">GitHub</a></ul>
-        <ul><a href="/quoridor-ai">Quoridor AI</a> - Play Quoridor against the AI which I developed.</ul>
+        <ul><a href="/quoridor-ai/">Quoridor AI</a> - Play Quoridor against the AI which I developed.</ul>
     </p>
 </body>
 </html>
