--- a/quoridor-ai/index.html
+++ b/quoridor-ai/index.html
@@ -15,7 +15,7 @@
     
     <title>Play Quoridor against AI</title>
 
-    <meta name="description" content="Play Quoridor against the AI agent which is based on Monte Carlo tree search">
+    <meta name="description" content="Play Quoridor against an AI agent based on Monte Carlo tree search">
     <meta name="author" content="Lee Kyutae">
 
     <meta name="mobile-web-app-capable" content="yes">
@@ -48,22 +48,21 @@
             </div>
         </div>
         <div id="board_table_container">
-            <div class="fade_box in about" id="about_box">
+            <div class="fade_box in about hidden" id="about_box">
                 <div>
                     <h1>Play Quoridor against AI</h1>
                     <p class="last_updated">
-                            Last Updated: 2019-07-02
+                            Last Updated: 2019-07-07
                     </p>
                     <p>
                         Quoridor is a board game where the objective is to get your pawn
                         to the opposite side of the board. You can read
-                        the rules <a href="https://en.wikipedia.org/wiki/Quoridor#Rules_of_the_game" target="_blank">here</a>.
-                        They are simple.
+                        the simple rules <a href="https://en.wikipedia.org/wiki/Quoridor#Rules_of_the_game" target="_blank">here</a>.
                     </p>
                     <p>
                         This Quoridor AI is based on Monte Carlo tree search.
                         It is developed by <span class="no_wrap">Lee Kyutae</span>.
-                        You can view the source code on <a href="https://github.com/gorisanson/quoridor-ai" target="_blank">GitHub</a>.
+                        You can view the source code and other detailed description <a href="https://github.com/gorisanson/quoridor-ai" target="_blank">here</a>.
                     </p>
                     <p>
                         <span class="thick">Tip:</span><br>
@@ -82,7 +81,7 @@
             </div>
             <!--<div class="fade_box inout" id="game_result_message_box"><div>You win!</div></div>-->
             <!--<div class="fade_box inout" id="note_message_box">"There must remain at least one path to the goal for each pawn."</div>-->
-            <div class="fade_box in hidden" id="choose_ai_level_message_box">
+            <div class="fade_box in" id="choose_ai_level_message_box">
                 Choose the AI level. Higher-level AI takes more time.
                 <div class="button_container in_message_box">
                     <button class="ai_level" id="novice_level">Novice</button>
