--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head>
 <body>
     <p>I'm Kyutae.</p>
-    <p>
-        <ul><a href="https://github.com/gorisanson">GitHub</a></ul>
-        <ul><a href="/quoridor-ai/">Quoridor AI</a> - Play Quoridor against an AI agent developed by me.</ul>
-    </p>
+    <ul>
+        <li><a href="https://github.com/gorisanson">GitHub</a></li>
+        <li><a href="/quoridor-ai/">Quoridor AI</a> - Play Quoridor against an AI agent developed by me.</li>
+    </ul>
 </body>
 </html>
