Add the pikachu volleyball link

--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142477498-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-142477498-1"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-        gtag('config', 'UA-142477498-1');
+      gtag('config', 'UA-142477498-1');
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Kyutae's website</title>
-    <meta name="author" content="Lee Kyutae">
+    <meta name="author" content="Lee Kyutae" />
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 25px;
-        }
-
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 25px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <p>I'm Kyutae.</p>
     <ul>
-        <li><a href="https://github.com/gorisanson">GitHub</a></li>
-        <li><a href="/quoridor-ai/">Quoridor AI</a> - Play Quoridor against an AI agent developed by me.</li>
+      <li><a href="https://github.com/gorisanson">GitHub</a></li>
+      <li>
+        <a href="/quoridor-ai/">Quoridor AI</a> - Play Quoridor against an AI
+        agent developed by me.
+      </li>
+      <li>
+        <a href="/pikachu-volleyball/en/">Pikachu Volleyball</a> - Pikachu
+        Volleyball implemented into JavaScript by reverse engineering the
+        original game.
+      </li>
     </ul>
-</body>
+  </body>
 </html>
