Change to relative paths

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <ul>
       <li><a href="https://github.com/gorisanson">GitHub</a></li>
       <li>
-        <a href="/quoridor-ai/">Quoridor AI</a> - Play Quoridor against an AI
+        <a href="./quoridor-ai/">Quoridor AI</a> - Play Quoridor against an AI
         agent developed by me.
       </li>
       <li>
-        <a href="/pikachu-volleyball/en/">Pikachu Volleyball</a> - Pikachu
+        <a href="./pikachu-volleyball/en/">Pikachu Volleyball</a> - Pikachu
         Volleyball implemented into JavaScript by reverse engineering the
         original game.
       </li>
