Add pikachu volleyball p2p online link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         Volleyball implemented into JavaScript by reverse engineering the
         original game.
       </li>
+      <li>
+        <a href="./pikachu-volleyball-p2p-online/en/"
+          >Pikachu Volleyball P2P Online</a
+        >
+        - Pikachu Volleyball peer-to-peer online via WebRTC data channels.
+      </li>
     </ul>
   </body>
 </html>
