Add meta description tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Kyutae's website</title>
+    <meta name="description" content="Kyutae's website" />
     <meta name="author" content="Lee, Kyutae" />
     <link rel="stylesheet" href="style.css" />
   </head>
