Change github link to target _blank

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="flex-box margin-top-2 margin-bottom-2">
       <h1 class="margin-bottom-2">I'm Kyutae.</h1>
-      <a href="https://github.com/gorisanson">
+      <a href="https://github.com/gorisanson" target="_blank" rel="noopener">
         <img
           class="github-mark"
           alt="GitHub Mark"
