Change to absolute URLs

--- a/index.html
+++ b/index.html
@@ -37,16 +37,21 @@
       <h2>My personal projects</h2>
       <ul>
         <li>
-          <a href="./quoridor-ai/">Play Quoridor against AI</a> - Quoridor AI
-          which I developed.
+          <a href="https://gorisanson.github.io/quoridor-ai/"
+            >Play Quoridor against AI</a
+          >
+          - Quoridor AI which I developed.
         </li>
         <li>
-          <a href="./pikachu-volleyball/en/">Pikachu Volleyball</a> - Pikachu
-          Volleyball implemented into JavaScript by reverse engineering the
-          original game.
+          <a href="https://gorisanson.github.io/pikachu-volleyball/en/"
+            >Pikachu Volleyball</a
+          >
+          - Pikachu Volleyball implemented into JavaScript by reverse
+          engineering the original game.
         </li>
         <li>
-          <a href="./pikachu-volleyball-p2p-online/en/"
+          <a
+            href="https://gorisanson.github.io/pikachu-volleyball-p2p-online/en/"
             >Pikachu Volleyball P2P Online</a
           >
           - Pikachu Volleyball peer-to-peer online via WebRTC data channels.
