--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img
           class="github-mark"
           alt="GitHub Mark"
-          src="images/GitHub-Mark-64px.png"
+          src="images/GitHub-Mark-120px-plus.png"
       /></a>
     </div>
     <div class="flex-box">
