Edit index.html add again "P2P" word

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
           engineering the original game.
         </li>
         <li>
-          <a href="https://gorisanson.github.io/pikachu-volleyball-online/en/"
-            >Pikachu Volleyball Online</a
+          <a
+            href="https://gorisanson.github.io/pikachu-volleyball-p2p-online/en/"
+            >Pikachu Volleyball P2P Online</a
           >
           - Pikachu Volleyball peer-to-peer online via WebRTC data channels.
         </li>
