Add stack overflow and twitter link

--- a/index.html
+++ b/index.html
@@ -26,12 +26,30 @@
   <body>
     <div class="flex-box margin-top-2 margin-bottom-2">
       <h1 class="margin-bottom-2">I'm Kyutae.</h1>
-      <a href="https://github.com/gorisanson" target="_blank" rel="noopener">
-        <img
-          class="github-mark"
-          alt="GitHub Mark"
-          src="images/GitHub-Mark-120px-plus.png"
-      /></a>
+      <div class="flex-box horizontal">
+        <a href="https://github.com/gorisanson" target="_blank" rel="noopener">
+          <img
+            class="github-mark"
+            alt="GitHub Mark"
+            src="images/GitHub-Mark-120px-plus.png"
+        /></a>
+        <a
+          href="https://stackoverflow.com/users/8581025/gorisanson"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
+            class="so-icon"
+            alt="Stack Overflow Icon"
+            src="images/so-icon.png"
+        /></a>
+        <a href="https://twitter.com/gorisanson" target="_blank" rel="noopener">
+          <img
+            class="twitter-logo"
+            alt="Twitter Logo"
+            src="images/Twitter_Logo_Blue.png"
+        /></a>
+      </div>
     </div>
     <div class="flex-box">
       <h2>My personal projects</h2>
