Update gtag.js for Google Analytics

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'UA-142477498-1');
+      gtag('config', 'UA-142477498-1', {
+        cookie_domain: 'gorisanson.github.io',
+        cookie_flags: 'SameSite=None;Secure',
+        anonymize_ip: true,
+      });
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
