--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="flex-box margin-top-2 margin-bottom-2">
+    <div class="flex-box margin-top-2">
       <h1 class="margin-bottom-2">I'm Kyutae.</h1>
       <div class="flex-box horizontal">
         <a href="https://github.com/gorisanson" target="_blank" rel="noopener">
@@ -55,9 +55,9 @@
         /></a>
       </div>
     </div>
-    <div class="flex-box">
+    <div class="flex-box margin-top-2">
       <h2>My personal projects</h2>
-      <ul>
+      <ul class="projects-list">
         <li>
           <a href="https://gorisanson.github.io/quoridor-ai/"
             >Play Quoridor against AI</a
@@ -77,6 +77,34 @@
             >Pikachu Volleyball P2P Online</a
           >
           - Pikachu Volleyball peer-to-peer online via WebRTC data channels.
+        </li>
+      </ul>
+    </div>
+    <div class="flex-box margin-top-2">
+      <h2>Collaborative works</h2>
+      <ul class="projects-list">
+        <li>
+          <a
+            href="https://pengsoovolleyball.github.io/ko/"
+            target="_blank"
+            rel="noopener"
+            >Pengsoo Volleyball</a
+          >
+          - Based on the
+          <a
+            href="https://gorisanson.github.io/pikachu-volleyball/en/"
+            target="_blank"
+            rel="noopener"
+            >Pikachu Volleyball</a
+          >
+          implemented into JavaScript. The images and sounds of Pengsoo were
+          provided by
+          <a
+            href="https://home.ebs.co.kr/giantpeng/main"
+            target="_blank"
+            rel="noopener"
+            >Giant Peng TV</a
+          >.
         </li>
       </ul>
     </div>
