--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             class="github-mark"
             alt="GitHub Mark"
             src="images/GitHub-Mark-120px-plus.png"
+            width="120"
+            height="120"
         /></a>
         <a
           href="https://stackoverflow.com/users/8581025/gorisanson"
@@ -46,12 +48,16 @@
             class="so-icon"
             alt="Stack Overflow Icon"
             src="images/so-icon.png"
+            width="158"
+            height="158"
         /></a>
         <a href="https://twitter.com/gorisanson" target="_blank" rel="noopener">
           <img
             class="twitter-logo"
             alt="Twitter Logo"
             src="images/Twitter_Logo_Blue.png"
+            width="400"
+            height="400"
         /></a>
       </div>
     </div>
