--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <title>Kyutae's website</title>
     <meta name="description" content="Kyutae's website" />
-    <meta name="author" content="Lee, Kyutae" />
+    <meta name="author" content="Kyutae Lee" />
     <link rel="stylesheet" href="style.6ebb4e5df0836cf301fb22f30101a6a9.css" />
   </head>
   <body>
