--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,15 @@
   </head>
   <body>
     <div class="flex-box margin-top-2">
-      <h1 class="margin-bottom-2">I'm Kyutae.</h1>
+      <h1 class="margin-bottom-1">I'm Kyutae.</h1>
       <div class="flex-box horizontal">
         <a href="https://github.com/gorisanson" target="_blank" rel="noopener">
           <img
             class="github-mark"
             alt="GitHub Mark"
-            src="resources/images/GitHub-Mark-120px-plus.png"
-            width="120"
-            height="120"
+            src="resources/images/github-mark.png"
+            width="240"
+            height="240"
         /></a>
         <a
           href="https://stackoverflow.com/users/8581025/gorisanson"
@@ -61,7 +61,17 @@
         /></a>
       </div>
     </div>
-    <div class="flex-box margin-top-2">
+    <div class="flex-box margin-top-1">
+      <div class="color-scheme-toggle-switch-container">
+        <input
+          type="checkbox"
+          id="dark-color-scheme-checkbox-1"
+          class="toggle-switch dark-color-scheme-checkbox"
+        />
+        <label for="dark-color-scheme-checkbox-1"></label>
+      </div>
+    </div>
+    <div class="flex-box margin-top-1-half">
       <h2>My personal projects</h2>
       <ul class="projects-list">
         <li>
@@ -86,7 +96,7 @@
         </li>
       </ul>
     </div>
-    <div class="flex-box margin-top-2">
+    <div class="flex-box margin-top-1-half">
       <h2>Collaborative works</h2>
       <ul class="projects-list">
         <li>
