Add LinkedIn logo
indicating the link to my LinkedIn profile.

Cherry-picking of 952e9f9a372b411e9fde66776d8825e5406867db

--- a/src/index.html
+++ b/src/index.html
@@ -29,34 +29,58 @@
     <div class="flex-box margin-top-2">
       <h1 class="margin-bottom-1">I'm Kyutae.</h1>
       <div class="flex-box horizontal">
-        <a href="https://github.com/gorisanson" target="_blank" rel="noopener">
-          <img
-            class="github-mark"
-            alt="GitHub Mark"
-            src="resources/images/github-mark.png"
-            width="240"
-            height="240"
-        /></a>
-        <a
-          href="https://stackoverflow.com/users/8581025/gorisanson"
-          target="_blank"
-          rel="noopener"
-        >
-          <img
-            class="so-icon"
-            alt="Stack Overflow Icon"
-            src="resources/images/so-icon.png"
-            width="158"
-            height="158"
-        /></a>
-        <a href="https://twitter.com/gorisanson" target="_blank" rel="noopener">
-          <img
-            class="twitter-logo"
-            alt="Twitter Logo"
-            src="resources/images/Twitter_Logo_Blue.png"
-            width="400"
-            height="400"
-        /></a>
+        <div class="flex-box horizontal no-wrap">
+          <a
+            href="https://github.com/gorisanson"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              class="github-mark"
+              alt="GitHub Mark"
+              src="resources/images/github-mark.png"
+              width="240"
+              height="240"
+          /></a>
+          <a
+            href="https://stackoverflow.com/users/8581025/gorisanson"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              class="so-icon"
+              alt="Stack Overflow Icon"
+              src="resources/images/so-icon.png"
+              width="158"
+              height="158"
+          /></a>
+        </div>
+        <div class="flex-box horizontal no-wrap">
+          <a
+            href="https://twitter.com/gorisanson"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              class="twitter-logo"
+              alt="Twitter Logo"
+              src="resources/images/Twitter_Logo_Blue.png"
+              width="400"
+              height="400"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/gorisanson/"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              class="linkedin-logo"
+              alt="LinkedIn Logo"
+              src="resources/images/In-Blue-128@2x.png"
+              width="256"
+              height="256"
+          /></a>
+        </div>
       </div>
     </div>
     <div class="flex-box margin-top-1">
