Create section for open source contributions

--- a/src/index.html
+++ b/src/index.html
@@ -71,56 +71,86 @@
     </div>
     <div class="flex-box margin-top-1-half">
       <h2>My personal projects</h2>
-      <ul class="projects-list">
-        <li>
-          <a href="https://gorisanson.github.io/quoridor-ai/"
-            >Play Quoridor against AI</a
-          >
-          - Quoridor AI which I developed.
-        </li>
-        <li>
-          <a href="https://gorisanson.github.io/pikachu-volleyball/en/"
-            >Pikachu Volleyball</a
-          >
-          - Pikachu Volleyball implemented into JavaScript by reverse
-          engineering the original game.
-        </li>
-        <li>
-          <a
-            href="https://gorisanson.github.io/pikachu-volleyball-p2p-online/en/"
-            >Pikachu Volleyball P2P Online</a
-          >
-          - Pikachu Volleyball peer-to-peer online via WebRTC data channels.
-        </li>
-      </ul>
+      <div class="projects-list">
+        <ul>
+          <li>
+            <a href="https://gorisanson.github.io/quoridor-ai/"
+              >Play Quoridor against AI</a
+            >
+            - Quoridor AI which I developed.
+          </li>
+          <li>
+            <a href="https://gorisanson.github.io/pikachu-volleyball/en/"
+              >Pikachu Volleyball</a
+            >
+            - Pikachu Volleyball implemented into JavaScript by reverse
+            engineering the original game.
+          </li>
+          <li>
+            <a
+              href="https://gorisanson.github.io/pikachu-volleyball-p2p-online/en/"
+              >Pikachu Volleyball P2P Online</a
+            >
+            - Pikachu Volleyball peer-to-peer online via WebRTC data channels.
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="flex-box margin-top-1-half">
       <h2>Collaborative works</h2>
-      <ul class="projects-list">
-        <li>
-          <a
-            href="https://pengsoovolleyball.github.io/ko/"
-            target="_blank"
-            rel="noopener"
-            >Pengsoo Volleyball</a
-          >
-          - Based on the
-          <a
-            href="https://gorisanson.github.io/pikachu-volleyball/en/"
-            target="_blank"
-            rel="noopener"
-            >Pikachu Volleyball</a
-          >
-          implemented into JavaScript. The images and sounds of Pengsoo were
-          provided by
-          <a
-            href="https://home.ebs.co.kr/giantpeng/main"
-            target="_blank"
-            rel="noopener"
-            >Giant Peng TV</a
-          >.
-        </li>
-      </ul>
+      <div class="projects-list">
+        <ul>
+          <li>
+            <a
+              href="https://pengsoovolleyball.github.io/ko/"
+              target="_blank"
+              rel="noopener"
+              >Pengsoo Volleyball</a
+            >
+            - Based on the
+            <a
+              href="https://gorisanson.github.io/pikachu-volleyball/en/"
+              target="_blank"
+              rel="noopener"
+              >Pikachu Volleyball</a
+            >
+            implemented into JavaScript. The images and sounds of Pengsoo were
+            provided by
+            <a
+              href="https://home.ebs.co.kr/giantpeng/main"
+              target="_blank"
+              rel="noopener"
+              >Giant Peng TV</a
+            >.
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="flex-box margin-top-1-half">
+      <h2 class="text-align-center">
+        Some of my contributions<br />
+        to open source projects
+      </h2>
+      <div class="projects-list">
+        <ul>
+          <li>
+            <a
+              href="https://webrtc-review.googlesource.com/q/owner:gorisanson@gmail.com"
+              target="_blank"
+              rel="noopener"
+              >for WebRTC</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://chromium-review.googlesource.com/q/owner:gorisanson@gmail.com"
+              target="_blank"
+              rel="noopener"
+              >for Chromium</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="for-margin"></div>
   </body>
