--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,8 @@
     </div>
     <div class="flex-box margin-top-1-half">
       <h2 class="text-align-center">
-        Some of my contributions<br />
-        to open source projects
+        Some of my contributions to<br />
+        open source projects
       </h2>
       <div class="projects-list">
         <ul>
