Add contributions for Firefox to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -159,18 +159,26 @@
         <ul>
           <li>
             <a
-              href="https://webrtc-review.googlesource.com/q/owner:gorisanson@gmail.com"
-              target="_blank"
-              rel="noopener"
-              >for WebRTC</a
-            >
-          </li>
-          <li>
-            <a
               href="https://chromium-review.googlesource.com/q/owner:gorisanson@gmail.com"
               target="_blank"
               rel="noopener"
               >for Chromium</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://phabricator.services.mozilla.com/differential/?authorPHIDs%5B0%5D=PHID-USER-62uqyo5vcqbfmtoeh5da"
+              target="_blank"
+              rel="noopener"
+              >for Firefox</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://webrtc-review.googlesource.com/q/owner:gorisanson@gmail.com"
+              target="_blank"
+              rel="noopener"
+              >for WebRTC</a
             >
           </li>
         </ul>
