--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,21 @@
         <ul>
           <li>
             <a
+              href="https://game.jogumanstudio.com/"
+              target="_blank"
+              rel="noopener"
+              >Joguman: The First Flight</a
+            >
+            - A flight game created and designed by
+            <a
+              href="https://www.jogumanstudio.com/"
+              target="_blank"
+              rel="noopener"
+              >Joguman Studio</a
+            >, with programming by me.
+          </li>
+          <li>
+            <a
               href="https://pengsoovolleyball.github.io/ko/"
               target="_blank"
               rel="noopener"
