--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
     <div class="flex-box margin-top-1-half">
-      <h2>My personal projects</h2>
+      <h2>Personal projects</h2>
       <div class="projects-list">
         <ul>
           <li>
