Update jogumanstudio.com to joguman.com

--- a/src/index.html
+++ b/src/index.html
@@ -126,14 +126,14 @@
         <ul>
           <li>
             <a
-              href="https://game.jogumanstudio.com/"
+              href="https://game.joguman.com/"
               target="_blank"
               rel="noopener"
               >Joguman: The First Flight</a
             >
             - A flight game created and designed by
             <a
-              href="https://www.jogumanstudio.com/"
+              href="https://www.joguman.com/"
               target="_blank"
               rel="noopener"
               >Joguman Studio</a
